--- a/style.css
+++ b/style.css
@@ -24,10 +24,11 @@ body {
     text-align: center;
 }
 
-
 #footer {
     width: 100%;
     height: 50px;
+    position: absolute;
+    bottom: 0;
     line-height: 50px;
     background-color: burlywood;
     text-align: center;
